[package]
authors = ["Dario Götz <dario.goetz@googlemail.com>"]
name = "cantor-firmware-keyberon"
edition = "2021"
version = "0.1.0"

[workspace]
members = ["testsuite"]

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.1", features = ["device"] }
cortex-m-rtic = "1"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
embedded-hal = "0.2"
keyberon = { git = "https://github.com/cirho/keyberon.git" }
nb = "1"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
stm32f4xx-hal = { version = "0.16", features = ["stm32f401", "usb_fs"] }
usb-device = "0.2.8"

[features]
right_half = []

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s"         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s"         # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s"          # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s"          # <-
overflow-checks = false  # <-
